--- a/login.html
+++ b/login.html
@@ -8,6 +8,11 @@
     <link rel="stylesheet" href="css/login-page.css">
 </head>
 <body>
+
+    <div class="mascot-container">
+        <img src="buddyhello.png" alt="Buddy Mascot" class="mascot-image">
+    </div>
+    
     <h1 class="auth-title">HI BUDDY</h1>
     
     <div class="auth-container">
