--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Buddy Chat</title>
+    <link rel="manifest" href="manifest.json" />
     <link rel="stylesheet" href="css/index-page.css" />
     <link
       href="https://fonts.googleapis.com/css2?family=Pacifico&family=Rubik:wght@400;500&display=swap"
@@ -162,6 +163,73 @@
         const lowerMsg = userMessage.toLowerCase();
         return responses[lowerMsg] || responses["default"];
       }
+      if ("serviceWorker" in navigator) {
+        navigator.serviceWorker
+          .register("service-worker.js")
+          .then(() => console.log("Service Worker Registered"));
+      }
+    </script>
+    <!-- Install App Button (Initially Hidden) -->
+    <button
+      id="installBtn"
+      style="
+        display: none;
+        position: fixed;
+        bottom: 16px;
+        right: 16px;
+        padding: 12px 16px;
+        background-color: #2196f3;
+        color: white;
+        border: none;
+        border-radius: 8px;
+        font-weight: bold;
+        z-index: 999;
+      "
+    >
+      Install App
+    </button>
+
+    <script>
+      let deferredPrompt;
+      const installBtn = document.getElementById("installBtn");
+
+      window.addEventListener("beforeinstallprompt", (e) => {
+        // Stop auto prompt
+        e.preventDefault();
+        deferredPrompt = e;
+
+        // Show button
+        installBtn.style.display = "block";
+
+        installBtn.addEventListener("click", () => {
+          installBtn.style.display = "none";
+          deferredPrompt.prompt();
+
+          deferredPrompt.userChoice.then((choiceResult) => {
+            if (choiceResult.outcome === "accepted") {
+              console.log("User accepted the install prompt");
+            } else {
+              console.log("User dismissed the install prompt");
+            }
+            deferredPrompt = null;
+          });
+        });
+      });
+
+      window.addEventListener("beforeinstallprompt", (e) => {
+        console.log("👍 beforeinstallprompt fired");
+        e.preventDefault();
+        deferredPrompt = e;
+        installBtn.style.display = "block";
+      });
+
+      window.addEventListener("appinstalled", () => {
+        console.log("✅ App installed!");
+      });
+
+      window.addEventListener("beforeinstallprompt", (e) => {
+        console.log("👍 beforeinstallprompt fired on MOBILE");
+      });
     </script>
   </body>
 </html>
