--- a/index.html
+++ b/index.html
@@ -170,66 +170,55 @@
       }
     </script>
     <!-- Install App Button (Initially Hidden) -->
-    <button
-      id="installBtn"
-      style="
-        display: none;
-        position: fixed;
-        bottom: 16px;
-        right: 16px;
-        padding: 12px 16px;
-        background-color: #2196f3;
-        color: white;
-        border: none;
-        border-radius: 8px;
-        font-weight: bold;
-        z-index: 999;
-      "
-    >
-      Install App
-    </button>
+    <!-- Install App Button (Top Right) -->
+<button id="installBtn" style="
+  display: none;
+  position: fixed;
+  top: 16px;
+  right: 16px;
+  padding: 10px 14px;
+  background-color: #2196f3;
+  color: white;
+  border: none;
+  border-radius: 6px;
+  font-weight: 600;
+  font-size: 14px;
+  cursor: pointer;
+  z-index: 1000;
+">
+  Install
+</button>
+
 
     <script>
-      let deferredPrompt;
-      const installBtn = document.getElementById("installBtn");
+  let deferredPrompt;
+  const installBtn = document.getElementById('installBtn');
 
-      window.addEventListener("beforeinstallprompt", (e) => {
-        // Stop auto prompt
-        e.preventDefault();
-        deferredPrompt = e;
+  window.addEventListener('beforeinstallprompt', (e) => {
+    console.log('👍 Install prompt ready');
+    e.preventDefault();
+    deferredPrompt = e;
+    installBtn.style.display = 'block';
 
-        // Show button
-        installBtn.style.display = "block";
+    installBtn.addEventListener('click', () => {
+      installBtn.style.display = 'none';
+      deferredPrompt.prompt();
 
-        installBtn.addEventListener("click", () => {
-          installBtn.style.display = "none";
-          deferredPrompt.prompt();
-
-          deferredPrompt.userChoice.then((choiceResult) => {
-            if (choiceResult.outcome === "accepted") {
-              console.log("User accepted the install prompt");
-            } else {
-              console.log("User dismissed the install prompt");
-            }
-            deferredPrompt = null;
-          });
-        });
+      deferredPrompt.userChoice.then((choiceResult) => {
+        if (choiceResult.outcome === 'accepted') {
+          console.log('✅ App installed');
+        } else {
+          console.log('❌ User dismissed');
+        }
+        deferredPrompt = null;
       });
+    });
+  });
 
-      window.addEventListener("beforeinstallprompt", (e) => {
-        console.log("👍 beforeinstallprompt fired");
-        e.preventDefault();
-        deferredPrompt = e;
-        installBtn.style.display = "block";
-      });
+  window.addEventListener('appinstalled', () => {
+    console.log('✅ Installed');
+  });
+</script>
 
-      window.addEventListener("appinstalled", () => {
-        console.log("✅ App installed!");
-      });
-
-      window.addEventListener("beforeinstallprompt", (e) => {
-        console.log("👍 beforeinstallprompt fired on MOBILE");
-      });
-    </script>
   </body>
 </html>
